[package]
name    = "clock"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui      = { version = "0.29", features = ["crossterm"] }
crossterm    = "0.28"
color-eyre   = "0.6"
anyhow       = "1"
rodio        = { version = "0.19", default-features = false, features = ["wav"] }
notify-rust  = "4"
